# kartina

./: .gitignore  Cargo.toml  README.md  build.rs
song/: LICENSE.md  README.md
src/: main.rs  shader.frag  state.rs
src/state/: mod.rs  vertex.rs
src/state/camera/: mod.rs
src/state/vertex/: mod.rs
