[package]
name = "kartina"
version = "0.1.0"
authors = ["Timothy Maloney <tmaloney@pdx.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
play = "0.5.3"
image = "0.23"
winit = "0.24"
cgmath = "0.18"
env_logger = "0.7"
log = "0.4"
futures = "0.3"

[dependencies.wgpu]
version = "0.7"
features = ["vulkan-portability"]

[build-dependencies]
shaderc = "0.7"
glob = "0.3"
fs_extra = "1.2"
anyhow = "1.0"
